--- a/package.json
+++ b/package.json
@@ -14,28 +14,28 @@
     "@radix-ui/react-select": "^1.2.2",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-toast": "^1.1.4",
-    "@stripe/stripe-js": "^1.54.1",
-    "autoprefixer": "10.4.14",
+    "@stripe/stripe-js": "^2.1.6",
+    "autoprefixer": "^10.4.16",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "cmdk": "^0.2.0",
-    "lucide-react": "^0.263.1",
-    "mongodb": "^5.6.0",
+    "lucide-react": "^0.279.0",
+    "mongodb": "^6.1.0",
     "mongoose": "^7.3.1",
-    "next": "^13.4.12",
+    "next": "^13.5.3",
     "next-auth": "^4.22.1",
-    "postcss": "8.4.23",
+    "postcss": "^8.4.31",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "sharp": "^0.32.4",
-    "stripe": "^12.13.0",
+    "sharp": "^0.32.6",
+    "stripe": "^13.8.0",
     "tailwind-merge": "^1.14.0",
     "tailwind-scrollbar-hide": "^1.1.7",
-    "tailwindcss": "3.3.2"
+    "tailwindcss": "^3.3.3"
   },
   "devDependencies": {
-    "prettier": "^2.8.8",
-    "prettier-plugin-tailwindcss": "^0.3.0",
+    "prettier": "^3.0.3",
+    "prettier-plugin-tailwindcss": "^0.5.4",
     "tailwindcss-animate": "^1.0.6"
   }
 }
