Update font to geist

--- a/package.json
+++ b/package.json
@@ -19,10 +19,11 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "cmdk": "^0.2.0",
+    "geist": "^1.1.0",
     "lucide-react": "^0.279.0",
     "mongodb": "^6.2.0",
     "mongoose": "^7.6.3",
-    "next": "^14.0.0",
+    "next": "^14.0.2",
     "next-auth": "^4.24.4",
     "postcss": "^8.4.31",
     "react": "^18.2.0",
