--- a/package.json
+++ b/package.json
@@ -15,24 +15,26 @@
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-toast": "^1.1.4",
     "@stripe/stripe-js": "^2.1.10",
+    "@vercel/analytics": "^1.1.1",
+    "@vercel/speed-insights": "^1.0.2",
     "autoprefixer": "^10.4.16",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "cmdk": "^0.2.0",
-    "geist": "^1.1.0",
+    "geist": "^1.2.0",
     "lucide-react": "^0.279.0",
-    "mongodb": "^6.2.0",
-    "mongoose": "^7.6.3",
-    "next": "^14.0.2",
+    "mongodb": "^6.3.0",
+    "mongoose": "^8.0.2",
+    "next": "^14.0.4",
     "next-auth": "^4.24.4",
     "postcss": "^8.4.31",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "sharp": "^0.32.6",
-    "stripe": "^14.2.0",
+    "sharp": "^0.33.0",
+    "stripe": "^14.7.0",
     "tailwind-merge": "^1.14.0",
     "tailwind-scrollbar-hide": "^1.1.7",
-    "tailwindcss": "^3.3.5"
+    "tailwindcss": "^3.4.0"
   },
   "devDependencies": {
     "prettier": "^3.0.3",
