--- a/package.json
+++ b/package.json
@@ -21,12 +21,13 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "cmdk": "^0.2.0",
+    "embla-carousel-react": "^8.0.0-rc21",
     "geist": "^1.2.1",
     "lucide-react": "^0.279.0",
-    "mongodb": "^6.3.0",
-    "mongoose": "^8.0.2",
-    "next": "^14.1.0",
-    "next-auth": "^4.24.5",
+    "mongodb": "^6.4.0",
+    "mongoose": "^8.2.0",
+    "next": "^14.1.1",
+    "next-auth": "^4.24.6",
     "postcss": "^8.4.31",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
